--- a/a.html
+++ b/a.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>a plug of jquery used to validate form input</title>
+<title>a plug of jquery used to validate form inputi tidy by xiaoang<title>
 <style type="text/css">
 body,td,span,em,select,label,button,input,ol, dl, dd, p, ul{margin:0;padding:0}
 ol, menu, ul {list-style: none outside none;}
